<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="Search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"/>
    <item android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"/>
    <item android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item android:id="@+id/shop"
        android:title="@string/go_to_shop"
        app:showAsAction="never"/>
    <item android:id="@+id/manage"
        android:title="@string/order_manager"
        app:showAsAction="never"/>
</menu>