<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditDrinkActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagedrink"
            android:src="@drawable/ic_state_home"
            android:layout_width="200dp"
            android:layout_height="fill_parent" />
        <Button
            android:background="@drawable/state_button"
            android:textColor="@color/white"
            android:id="@+id/btnchooseimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_image"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
    <EditText
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etnamedrink"
        android:hint="@string/name_drink"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etdescription"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minLines="4"
        android:lines="10"
        android:gravity="top"
        android:layout_marginTop="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etprice"
        android:hint="@string/price"
        android:inputType="numberSigned"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:padding="5dp"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:background="@drawable/state_button"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finish"
            android:id="@+id/btnsave"
            />

        <Button
            android:background="@drawable/state_button"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/btncancel"
            />

    </LinearLayout>

</LinearLayout>