<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/linearlayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="35sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/state_edittext"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp" />

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/state_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="5dp" />

            <EditText
                android:id="@+id/etname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/state_edittext"
                android:hint="@string/name_user"
                android:inputType="text"
                android:paddingLeft="5dp" />

            <LinearLayout
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <Spinner
                    android:id="@+id/spinnertinh"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"></Spinner>

                <Spinner
                    android:id="@+id/spinnerhuyen"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"></Spinner>

                <Spinner
                    android:id="@+id/spinnerxa"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"></Spinner>
            </LinearLayout>

            <EditText
                android:id="@+id/etaddress"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/state_edittext"
                android:hint="@string/address"
                android:inputType="text"
                android:paddingLeft="5dp" />

            <EditText
                android:id="@+id/etphone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/state_edittext"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingLeft="5dp" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btsignin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/state_button"
                android:text="@string/sign_in"
                android:textColor="@color/white" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btsignup"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/state_button"
                android:text="@string/sign_up"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/tvsignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/suggestion_sign_up"
                android:textColor="@color/blue"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvsignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/suggestion_sign_in"
                android:textColor="@color/blue"
                android:textSize="17sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>