<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddShopActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagestore"
            android:src="@drawable/ic_state_home"
            android:layout_width="300dp"
            android:layout_height="fill_parent" />
        <Button
            android:background="@drawable/state_button"
            android:textColor="@color/white"
            android:id="@+id/btnchooseimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_image"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etnamestore"
        android:hint="@string/name_store"
        android:inputType="text" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Spinner
            android:spinnerMode="dropdown"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/spinnertinh">
        </Spinner>
        <Spinner
            android:spinnerMode="dropdown"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/spinnerhuyen">
        </Spinner>
        <Spinner
            android:spinnerMode="dropdown"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/spinnerxa">
        </Spinner>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etaddress"
        android:hint="@string/address"
        android:inputType="text"
        android:layout_marginTop="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etphone"
        android:hint="@string/phone"
        android:inputType="phone"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:padding="5dp"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:background="@drawable/state_button"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create"
            android:id="@+id/btnsave"
            />

        <Button
            android:background="@drawable/state_button"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/btncancel"
            />

    </LinearLayout>
</LinearLayout>